# papers-to-knowledge-base

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
_dev/: README.md
_dev/papers-library-pipeline/: conftest.py
_dev/papers-library-pipeline/tests/: test_acceptance.py  test_expand_refs.py  test_export_excel.py  test_harvest_checkpoint.py  test_network_live.py  test_openalex_crossref_unit.py  test_openalex_skip_persist.py  test_paths_manifest.py  test_pdf_names.py  test_scihub_preferred.py  test_source_health.py
skills/papers-knowledge-site/: README.md  README.zh-CN.md  SKILL.md
skills/papers-knowledge-site/mcp/: paddleocr.mcp.json.example
skills/papers-knowledge-site/references/: checklist.md  paddleocr-mcp.md  static-html-site.md
skills/papers-knowledge-site/scripts/: pyproject.toml  requirements.txt
skills/papers-knowledge-site/scripts/papers_knowledge_site/: __init__.py  citation_extract.py  env_load.py  extract_pdf_images.py  pdf_to_md.py
skills/papers-library-pipeline/: .gitignore  README.md  README.zh-CN.md  SKILL.md
skills/papers-library-pipeline/references/: checklist.md  parallel-subagents.md
skills/papers-library-pipeline/scripts/: domain_config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  seed_works.example.json
skills/papers-library-pipeline/scripts/papers_library_pipeline/: __init__.py  candidates.py  crossref_client.py  env_load.py  expand_refs.py  export_excel.py  http_util.py  manifest.py  openalex_client.py  paths.py  pdf_fetch.py  pdf_names.py  run_harvest.py  score.py  source_health.py  sync_manifest.py
skills/papers-to-knowledge-base/: README.md  README.zh-CN.md  SKILL.md
skills/papers-to-knowledge-base/mcp/: paddleocr.mcp.json.example
skills/papers-to-knowledge-base/references/: install-hosts.md  intake.md
