[project]
name = "papers-knowledge-site"
version = "0.1.0"
description = "PDF→Markdown conversion helpers for static knowledge sites"
requires-python = ">=3.12,<3.14"
license = "MIT"
dependencies = [
    "markitdown[pdf]>=0.1.6",
    "PyMuPDF>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papers_knowledge_site"]
