[project]
name = "papers-library-pipeline"
version = "0.1.0"
description = "Harvest, triage, PDF download, and Excel export for literature libraries"
requires-python = ">=3.12,<3.14"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["papers_library_pipeline"]
